change to HashRouter bc of github pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://j-herr.github.io/DMVCovidApp",
+  "homepage": "http://j-herr.github.io/DMVCovidApp/#/home",
   "name": "covid-app",
   "version": "0.1.0",
   "private": true,
