--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "apexcharts": "^3.22.3",
+    "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "google-map-react": "^2.1.7",
     "react": "^16.13.1",
+    "react-apexcharts": "^1.3.7",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
